--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build a test client image
-        run: docker build -t sanyamgupta23/multi-client-test -f ./client/dockerfile.dev ./client
+        run: docker build -t sanyamgupta23/multi-client-test -f ./client/Dockerfile.dev ./client
 
       - name: Run tests on docker
         run: docker run -e CI=true sanyamgupta23/multi-client-test npm test
