--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -23,6 +23,7 @@ jobs:
 
   deploy:
     if: github.ref == 'refs/heads/main'
+    needs: tests
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
